<resources>
    <string name="app_name">بيطري</string>
    <string name="familyName_txt">اسم العائلة</string>
    <string name="ploicy_txt">بإتمامي للتسجيل فإني أعد موافقا علي شروط وسياسة الاستخدام الخاصة بتطبيق الصياهه</string>
    <string name="register">سجل</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">ٍسجل</string>
    <string name="bottom_layout_behavior" translatable="false">com.sakebook.android.sample.bottomnavigationviewsample.BottomLayoutBehavior</string>
    <string name="go_home">الذهاب اللي الصفحة الرئيسية</string>
    <string name="_966">+966</string>
    <string name="الاعدادات">الاعدادات</string>
    <string name="الرئيسية">الرئيسية</string>
    <string name="الإشعارات">الإشعارات</string>
    <string name="المساعدة">المساعدة</string>
    <string name="customr_login">Customr Login</string>
    <string name="email">Email</string>
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="orders">طلبات</string>
    <string name="language">اللغة</string>
    <string name="setting">الاعدادات</string>
    <string name="job">الوظيفة</string>
    <string name="email_ar">البريد الإلكتروني</string>
    <string name="personal_information">المعلومات الشخصية</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="frist_name">الاسم الأول</string>
    <string name="success_signup">تم انشاء الحساب بنجاح</string>
    <string name="dates">Dates</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="shop">shop</string>
    <string name="home">Home</string>
    <string name="shopname">اسم المتجر</string>
    <string name="jop">الوظيفة</string>
    <string name="familyName">اسم العائلة</string>
    <string name="fristName">الاسم الاول</string>
    <string name="order_reciever_number">رقم مستلم الطلب</string>
    <string name="please_write_more_details">الرجاء كتابه رقم المبني و اسم الشارع</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمة السر</string>
    <string name="no_account_sign_up">NO ACCOUNT ? SIGN UP</string>
    <string name="forget_password">هل نسيت كلمة المرور ؟</string>
    <string name="sign_as_baytary">سجل كبيطري</string>
    <string name="sign_as_visitor">سجل كزائر</string>
    <string name="sign_as_dealer">سجل كتاجر</string>
    <string name="clinic_place">مكان العيادة</string>
    <string name="elryad">الرياض</string>
    <string name="price">السعر</string>
    <string name="male">ذكر</string>
    <string name="profile_pic">صورة الهوية</string>
    <string name="conditions">الشروط و الأحكام</string>
    <string name="licence_frist">بإتمامي للتسجيل فإني اعد موافقا علي</string>
    <string name="licencetext">الخاصه بهذا التطبيق</string>
    <string name="sign_up_">سجل</string>
    <string name="choose_on_map">تحديد المكان علي الخريطه</string>
    <string name="store_photos">صور واجهه المحل</string>
    <string name="products___">منتجات /منتجات /منتجات</string>
    <string name="elsgl_eltogary">ًصوره السجل التجاري</string>
    <string name="success_sign_up">تم إنشاء الحساب بنجاح</string>
    <string name="female">أنثي</string>
    <string name="price_">السعر 2.600 رس</string>
    <string name="product_name">إسم المنتج</string>
    <string name="offer_description">شرح عن العرض</string>
    <string name="best_offer">افضل العروض</string>
    <string name="bytary_client">متاجر بيطري</string>
    <string name="harag_byray">حراج بيطري</string>
    <string name="add_ads">إضافة إعلان</string>
    <string name="search_ar">بحث</string>
    <string name="now">الان</string>
    <string name="ryad">الرياض</string>
    <string name="doctor_list">قائمة الاطباء</string>
    <string name="_2_600">السعر 2.600 رس</string>
    <string name="appointment_booking">حجز الموعد</string>
    <string name="doctor_rate">تقييم الطبيب</string>
    <string name="hypermarket">هايبر ماركت</string>
    <string name="doctor_bytary">حراج بيطري</string>
    <string name="map">الخريطة</string>
    <string name="adress">العنوان</string>
    <string name="_21_3">21.3</string>
    <string name="details">تفاصيل</string>
    <string name="advisor_name">اسم المعلن</string>
    <string name="continues">متابعة</string>
    <string name="bill">اصدار فاتورة</string>
    <string name="order">الطلب</string>
    <string name="delivery_location">عنوان التوصيل</string>
    <string name="delivery_time">وقت التوصيل</string>
    <string name="order_price">سعر الطلب</string>
    <string name="order_value">قمية التوصيل</string>
    <string name="payment_ensurance">تاكيد الدفع</string>
    <string name="beck_to_home">عودة إالي المتجر</string>
    <string name="order_sent">تم إرسال الطلبية</string>
    <string name="location_on_map">تحديد الموقع عبر الخريطة</string>
    <string name="delivery_comment">هل لديك ملاحظات للمندوب</string>
    <string name="coupon">كوبون التخفيض</string>
    <string name="payment_traffic">طريقة الدفع</string>
    <string name="back">عودة</string>
    <string name="shopping_reservation">مراجعة المشتريات</string>
    <string name="deliver_fee">رسوم التوصيل و العنوان</string>
    <string name="pay_online">إدفع اونلاين</string>
    <string name="order_ensure">تأكيد الطلب</string>
    <string name="order_success">تم تأكيد الطلب بنجاح</string>
    <string name="tracking_order">تتبع حاله الطلب</string>
    <string name="order_num">رقم طلبك</string>
    <string name="pay_ensure">الدفع والتاكيد</string>
    <string name="activate">تفعيل</string>


</resources>
