<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pinformation_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:gravity="end"
            android:text="@string/personal_information"
            android:textColor="@color/colorPrimary"
            app:drawableEndCompat="@drawable/user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fristName_edittext"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:ellipsize="end"
            android:gravity="start"
            android:hint="@string/frist_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingStart="5dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:chainUseRtl="true"
            app:layout_constraintEnd_toEndOf="@+id/pinformation_txt"
            app:layout_constraintTop_toBottomOf="@+id/pinformation_txt"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <EditText
            android:id="@+id/familyName_edittxt"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:ellipsize="end"
            android:gravity="start"
            android:hint="@string/familyName_txt"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/fristName_edittext"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fristName_edittext"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="5dp"
            android:text="@string/price"
            android:textColor="@color/colorPrimary"
            app:drawableRightCompat="@drawable/money__1_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fristName_edittext" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_corners"
            android:text="21.3"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView26"
            app:layout_constraintEnd_toStartOf="@+id/textView26"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="5dp"
            android:text="@string/phone_number"
            android:textColor="@color/colorPrimary"
            app:drawableRightCompat="@drawable/path_8829"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />
        <!--ImageView where image will be set-->
        <!--Button to pick image-->
        <Button
            android:id="@+id/img_pick_btn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Choose Image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>