<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="5dp"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                app:drawableRightCompat="@drawable/money__1_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frist_image_store" />

            <EditText
                android:id="@+id/map_text"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:ellipsize="start"
                android:gravity="start"
                android:hint="@string/elryad"
                android:inputType="number"
                android:padding="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/textView24"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView24"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="5dp"
                android:textColor="@color/colorPrimary"
                app:drawableRightCompat="@drawable/briefcase"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map_text" />

            <EditText
                android:id="@+id/frist_image_store"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:ellipsize="start"
                android:gravity="start"
                android:hint="@string/elryad"
                android:inputType="number"
                android:padding="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/textView25"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="5dp"
                android:text="@string/email_ar"
                android:textColor="@color/colorPrimary"
                app:drawableRightCompat="@drawable/mail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_edittext" />

            <EditText
                android:id="@+id/address_edittext"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:ellipsize="start"
                android:gravity="start"
                android:hint="@string/elryad"
                android:inputType="number"
                android:padding="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/textView23"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="5dp"
                android:text="@string/clinic_place"
                android:textColor="@color/colorPrimary"
                app:drawableRightCompat="@drawable/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_edittext" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/profile_pic"
                    app:layout_constraintVertical_bias="0.203" />


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right|bottom"
                    android:background="@drawable/profile_edit_icon"
                    android:src="@drawable/edit"
                    tools:ignore="RtlHardcoded" />
            </FrameLayout>

            <EditText
                android:id="@+id/fristName_edittext"
                android:layout_width="145dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/frist_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingStart="5dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                app:chainUseRtl="true"
                app:layout_constraintEnd_toEndOf="@+id/pinformation_txt"
                app:layout_constraintTop_toBottomOf="@+id/pinformation_txt"
                tools:ignore="RtlCompat,RtlSymmetry" />

            <TextView
                android:id="@+id/pinformation_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="5dp"
                android:ellipsize="end"
                android:gravity="end"
                android:text="@string/personal_information"
                android:textColor="@color/colorPrimary"
                app:drawableEndCompat="@drawable/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="5dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorPrimary"
                app:drawableRightCompat="@drawable/path_8829"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fristName_edittext" />

            <EditText
                android:id="@+id/phone_edittext"
                style="@style/Widget.Design.TextInputEditText"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:ellipsize="start"
                android:gravity="start"
                android:inputType="number"
                android:padding="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/_966"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="MissingConstraints,TextFields" />


            <EditText
                android:id="@+id/familyName_edittxt"
                android:layout_width="145dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/familyName_txt"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/fristName_edittext"
                app:layout_constraintHorizontal_bias="0.925"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fristName_edittext"
                tools:ignore="RtlCompat,RtlSymmetry" />

            <CheckBox
                android:id="@+id/check_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:gravity="right|center"
                android:layoutDirection="rtl"
                android:text="@string/female"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/check_male"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/check_male"
                tools:ignore="MissingConstraints,RtlHardcoded" />

            <CheckBox
                android:id="@+id/check_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:buttonTint="@color/colorPrimary"
                android:gravity="right|center"
                android:layoutDirection="rtl"
                android:text="@string/male"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView26"
                tools:ignore="MissingConstraints,RtlHardcoded" />

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/group_2321"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/check_male" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_pic"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButton" />

            <CheckBox
                android:id="@+id/checkLicence"
                android:layout_width="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton" />

            <TextView
                android:id="@+id/licence_text_doctor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/checkLicence"
                app:layout_constraintEnd_toStartOf="@+id/checkLicence"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/checkLicence" />

            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="32dp"
                android:background="@drawable/rounded_corners"
                android:text="21.3"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/textView26"
                app:layout_constraintEnd_toStartOf="@+id/textView26"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView26" />

            <Button
                android:id="@+id/register_as_doctor_btn"
                android:layout_width="300dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/sign_up_"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/licence_text_doctor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>